--- a/coding/NLP basics/nlp_basics.ipynb
+++ b/coding/NLP basics/nlp_basics.ipynb
@@ -1164,6 +1164,474 @@
     "    sentences[i]= ' '.join(words) # convert all the words to sentence\n",
     "sentences"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Parts of Speech Tagging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /Users/srinidhisunkara/nltk_data...\n",
+      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('averaged_perceptron_tagger')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('\\nI', 'NNS'),\n",
+       " ('have', 'VBP'),\n",
+       " ('three', 'CD'),\n",
+       " ('visions', 'NNS'),\n",
+       " ('for', 'IN'),\n",
+       " ('India.\\n\\nIn', 'NNP'),\n",
+       " ('3000', 'CD'),\n",
+       " ('years', 'NNS'),\n",
+       " ('of', 'IN'),\n",
+       " ('our', 'PRP$'),\n",
+       " ('history,', 'JJ'),\n",
+       " ('people', 'NNS'),\n",
+       " ('from', 'IN'),\n",
+       " ('all', 'DT'),\n",
+       " ('over', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('world', 'NN'),\n",
+       " ('have', 'VBP'),\n",
+       " ('come', 'VBN'),\n",
+       " ('and', 'CC'),\n",
+       " ('invaded', 'VBN'),\n",
+       " ('us,', 'NN'),\n",
+       " ('captured', 'VBD'),\n",
+       " ('our', 'PRP$'),\n",
+       " ('lands,', 'NN'),\n",
+       " ('conquered', 'VBD'),\n",
+       " ('our', 'PRP$'),\n",
+       " ('minds.', 'NN'),\n",
+       " ('From', 'IN'),\n",
+       " ('Alexander', 'NNP'),\n",
+       " ('onwards,', 'VBD'),\n",
+       " ('the', 'DT'),\n",
+       " ('Greeks,', 'NNP'),\n",
+       " ('the', 'DT'),\n",
+       " ('Portuguese,', 'NNP'),\n",
+       " ('the', 'DT'),\n",
+       " ('British,', 'NNP'),\n",
+       " ('the', 'DT'),\n",
+       " ('French,', 'NNP'),\n",
+       " ('the', 'DT'),\n",
+       " ('Dutch—all', 'NNP'),\n",
+       " ('of', 'IN'),\n",
+       " ('them', 'PRP'),\n",
+       " ('came', 'VBD'),\n",
+       " ('and', 'CC'),\n",
+       " ('looted', 'VBD'),\n",
+       " ('us,', 'JJ'),\n",
+       " ('took', 'VBD'),\n",
+       " ('over', 'RP'),\n",
+       " ('what', 'WP'),\n",
+       " ('was', 'VBD'),\n",
+       " ('ours.', 'JJ'),\n",
+       " ('Yet,', 'NNP'),\n",
+       " ('we', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('not', 'RB'),\n",
+       " ('conquered', 'VBN'),\n",
+       " ('anyone.', 'IN'),\n",
+       " ('We', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('not', 'RB'),\n",
+       " ('grabbed', 'VBN'),\n",
+       " ('their', 'PRP$'),\n",
+       " ('land,', 'NN'),\n",
+       " ('culture,', 'NN'),\n",
+       " ('and', 'CC'),\n",
+       " ('history,', 'NN'),\n",
+       " ('nor', 'CC'),\n",
+       " ('tried', 'JJ'),\n",
+       " ('to', 'TO'),\n",
+       " ('enforce', 'VB'),\n",
+       " ('our', 'PRP$'),\n",
+       " ('way', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('life', 'NN'),\n",
+       " ('on', 'IN'),\n",
+       " ('them.\\n\\nWhy?', 'NN'),\n",
+       " ('Because', 'IN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('respect', 'VBP'),\n",
+       " ('the', 'DT'),\n",
+       " ('freedom', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('others.\\n\\nThat', 'WP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('why', 'WRB'),\n",
+       " ('my', 'PRP$'),\n",
+       " ('first', 'JJ'),\n",
+       " ('vision', 'NN'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('that', 'IN'),\n",
+       " ('of', 'IN'),\n",
+       " ('freedom.\\nI', 'NN'),\n",
+       " ('believe', 'VBP'),\n",
+       " ('that', 'IN'),\n",
+       " ('India', 'NNP'),\n",
+       " ('got', 'VBD'),\n",
+       " ('its', 'PRP$'),\n",
+       " ('first', 'JJ'),\n",
+       " ('vision', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('freedom', 'NN'),\n",
+       " ('in', 'IN'),\n",
+       " ('1857,', 'CD'),\n",
+       " ('when', 'WRB'),\n",
+       " ('we', 'PRP'),\n",
+       " ('started', 'VBD'),\n",
+       " ('the', 'DT'),\n",
+       " ('war', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('independence.', 'NN'),\n",
+       " ('It', 'PRP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('this', 'DT'),\n",
+       " ('freedom', 'NN'),\n",
+       " ('that', 'IN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('must', 'MD'),\n",
+       " ('protect', 'VB'),\n",
+       " ('and', 'CC'),\n",
+       " ('nurture', 'VB'),\n",
+       " ('if', 'IN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('are', 'VBP'),\n",
+       " ('to', 'TO'),\n",
+       " ('build', 'VB'),\n",
+       " ('a', 'DT'),\n",
+       " ('self-reliant', 'JJ'),\n",
+       " ('and', 'CC'),\n",
+       " ('developed', 'JJ'),\n",
+       " ('India.\\n\\nMy', 'NNP'),\n",
+       " ('second', 'JJ'),\n",
+       " ('vision', 'NN'),\n",
+       " ('for', 'IN'),\n",
+       " ('India’s', 'NNP'),\n",
+       " ('development.\\nFor', 'NN'),\n",
+       " ('fifty', 'NN'),\n",
+       " ('years,', 'NN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('been', 'VBN'),\n",
+       " ('a', 'DT'),\n",
+       " ('developing', 'VBG'),\n",
+       " ('nation.', 'NN'),\n",
+       " ('It', 'PRP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('time', 'NN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('see', 'VBP'),\n",
+       " ('ourselves', 'PRP'),\n",
+       " ('as', 'IN'),\n",
+       " ('a', 'DT'),\n",
+       " ('developed', 'JJ'),\n",
+       " ('nation.', 'NN'),\n",
+       " ('We', 'PRP'),\n",
+       " ('are', 'VBP'),\n",
+       " ('among', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('top', 'JJ'),\n",
+       " ('five', 'CD'),\n",
+       " ('nations', 'NNS'),\n",
+       " ('in', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('world', 'NN'),\n",
+       " ('in', 'IN'),\n",
+       " ('terms', 'NNS'),\n",
+       " ('of', 'IN'),\n",
+       " ('GDP.', 'NNP'),\n",
+       " ('We', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('ten', 'VBN'),\n",
+       " ('percent', 'JJ'),\n",
+       " ('growth', 'NN'),\n",
+       " ('rate', 'NN'),\n",
+       " ('in', 'IN'),\n",
+       " ('most', 'JJS'),\n",
+       " ('areas.', 'JJ'),\n",
+       " ('Our', 'PRP$'),\n",
+       " ('poverty', 'NN'),\n",
+       " ('levels', 'NNS'),\n",
+       " ('are', 'VBP'),\n",
+       " ('falling,', 'JJ'),\n",
+       " ('our', 'PRP$'),\n",
+       " ('achievements', 'NNS'),\n",
+       " ('are', 'VBP'),\n",
+       " ('being', 'VBG'),\n",
+       " ('recognized', 'VBN'),\n",
+       " ('worldwide.', 'JJ'),\n",
+       " ('Yet,', 'NNP'),\n",
+       " ('we', 'PRP'),\n",
+       " ('lack', 'VBP'),\n",
+       " ('the', 'DT'),\n",
+       " ('confidence', 'NN'),\n",
+       " ('to', 'TO'),\n",
+       " ('see', 'VB'),\n",
+       " ('ourselves', 'PRP'),\n",
+       " ('as', 'IN'),\n",
+       " ('a', 'DT'),\n",
+       " ('developed', 'JJ'),\n",
+       " ('nation,', 'JJ'),\n",
+       " ('self-reliant', 'JJ'),\n",
+       " ('and', 'CC'),\n",
+       " ('self-assured.\\n\\nIsn’t', 'JJ'),\n",
+       " ('this', 'DT'),\n",
+       " ('incorrect?\\n\\nI', 'NN'),\n",
+       " ('have', 'VBP'),\n",
+       " ('a', 'DT'),\n",
+       " ('third', 'JJ'),\n",
+       " ('vision.\\nIndia', 'NN'),\n",
+       " ('must', 'MD'),\n",
+       " ('stand', 'VB'),\n",
+       " ('up', 'RP'),\n",
+       " ('to', 'TO'),\n",
+       " ('the', 'DT'),\n",
+       " ('world.', 'NN'),\n",
+       " ('Because', 'IN'),\n",
+       " ('I', 'PRP'),\n",
+       " ('believe', 'VBP'),\n",
+       " ('that', 'IN'),\n",
+       " ('unless', 'IN'),\n",
+       " ('India', 'NNP'),\n",
+       " ('stands', 'VBZ'),\n",
+       " ('up', 'RP'),\n",
+       " ('to', 'TO'),\n",
+       " ('the', 'DT'),\n",
+       " ('world,', 'NN'),\n",
+       " ('no', 'DT'),\n",
+       " ('one', 'NN'),\n",
+       " ('will', 'MD'),\n",
+       " ('respect', 'VB'),\n",
+       " ('us.', 'IN'),\n",
+       " ('Only', 'RB'),\n",
+       " ('strength', 'NN'),\n",
+       " ('respects', 'NNS'),\n",
+       " ('strength.', 'VBP'),\n",
+       " ('We', 'PRP'),\n",
+       " ('must', 'MD'),\n",
+       " ('be', 'VB'),\n",
+       " ('strong', 'JJ'),\n",
+       " ('not', 'RB'),\n",
+       " ('only', 'RB'),\n",
+       " ('as', 'IN'),\n",
+       " ('a', 'DT'),\n",
+       " ('military', 'JJ'),\n",
+       " ('power', 'NN'),\n",
+       " ('but', 'CC'),\n",
+       " ('also', 'RB'),\n",
+       " ('as', 'IN'),\n",
+       " ('an', 'DT'),\n",
+       " ('economic', 'JJ'),\n",
+       " ('power.', 'NN'),\n",
+       " ('Both', 'NNP'),\n",
+       " ('must', 'MD'),\n",
+       " ('go', 'VB'),\n",
+       " ('hand-in-hand.\\n\\nI', 'JJ'),\n",
+       " ('want', 'NN'),\n",
+       " ('to', 'TO'),\n",
+       " ('ask', 'VB'),\n",
+       " ('you,', 'PRP'),\n",
+       " ('what', 'WDT'),\n",
+       " ('kind', 'NN'),\n",
+       " ('of', 'IN'),\n",
+       " ('a', 'DT'),\n",
+       " ('nation', 'NN'),\n",
+       " ('are', 'VBP'),\n",
+       " ('we', 'PRP'),\n",
+       " ('building?\\nThere', 'RB'),\n",
+       " ('was', 'VBD'),\n",
+       " ('a', 'DT'),\n",
+       " ('time', 'NN'),\n",
+       " ('when', 'WRB'),\n",
+       " ('we', 'PRP'),\n",
+       " ('were', 'VBD'),\n",
+       " ('the', 'DT'),\n",
+       " ('most', 'RBS'),\n",
+       " ('advanced', 'JJ'),\n",
+       " ('and', 'CC'),\n",
+       " ('prosperous', 'JJ'),\n",
+       " ('nation', 'NN'),\n",
+       " ('in', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('world.', 'NN'),\n",
+       " ('We', 'PRP'),\n",
+       " ('had', 'VBD'),\n",
+       " ('great', 'JJ'),\n",
+       " ('minds,', 'JJ'),\n",
+       " ('wealth,', 'NN'),\n",
+       " ('and', 'CC'),\n",
+       " ('culture.', 'NN'),\n",
+       " ('But', 'CC'),\n",
+       " ('over', 'IN'),\n",
+       " ('the', 'DT'),\n",
+       " ('years,', 'NN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('lost', 'VBD'),\n",
+       " ('confidence,', 'NN'),\n",
+       " ('and', 'CC'),\n",
+       " ('today,', 'VB'),\n",
+       " ('even', 'RB'),\n",
+       " ('after', 'IN'),\n",
+       " ('so', 'RB'),\n",
+       " ('many', 'JJ'),\n",
+       " ('advancements,', 'VBP'),\n",
+       " ('we', 'PRP'),\n",
+       " ('hesitate', 'VBP'),\n",
+       " ('to', 'TO'),\n",
+       " ('call', 'VB'),\n",
+       " ('ourselves', 'PRP'),\n",
+       " ('developed.\\n\\nWhy?\\n\\nWe', 'NNS'),\n",
+       " ('are', 'VBP'),\n",
+       " ('obsessed', 'VBN'),\n",
+       " ('with', 'IN'),\n",
+       " ('foreign', 'JJ'),\n",
+       " ('things.', 'NN'),\n",
+       " ('We', 'PRP'),\n",
+       " ('want', 'VBP'),\n",
+       " ('foreign', 'JJ'),\n",
+       " ('televisions,', 'JJ'),\n",
+       " ('foreign', 'JJ'),\n",
+       " ('shirts,', 'JJ'),\n",
+       " ('foreign', 'JJ'),\n",
+       " ('technology.', 'NN'),\n",
+       " ('Why', 'WRB'),\n",
+       " ('this', 'DT'),\n",
+       " ('obsession?', 'NN'),\n",
+       " ('It', 'PRP'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('self-respect', 'JJ'),\n",
+       " ('that', 'IN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('are', 'VBP'),\n",
+       " ('lacking.', 'JJ'),\n",
+       " ('If', 'IN'),\n",
+       " ('we', 'PRP'),\n",
+       " ('do', 'VBP'),\n",
+       " ('not', 'RB'),\n",
+       " ('respect', 'VB'),\n",
+       " ('ourselves,', 'IN'),\n",
+       " ('how', 'WRB'),\n",
+       " ('can', 'MD'),\n",
+       " ('we', 'PRP'),\n",
+       " ('expect', 'VB'),\n",
+       " ('others', 'NNS'),\n",
+       " ('to', 'TO'),\n",
+       " ('respect', 'VB'),\n",
+       " ('us?\\n\\nI', 'NN'),\n",
+       " ('was', 'VBD'),\n",
+       " ('in', 'IN'),\n",
+       " ('Hyderabad', 'NNP'),\n",
+       " ('giving', 'VBG'),\n",
+       " ('a', 'DT'),\n",
+       " ('lecture', 'NN'),\n",
+       " ('when', 'WRB'),\n",
+       " ('a', 'DT'),\n",
+       " ('14-year-old', 'JJ'),\n",
+       " ('girl', 'NN'),\n",
+       " ('asked', 'VBD'),\n",
+       " ('me', 'PRP'),\n",
+       " ('for', 'IN'),\n",
+       " ('my', 'PRP$'),\n",
+       " ('autograph.', 'NN'),\n",
+       " ('I', 'PRP'),\n",
+       " ('asked', 'VBD'),\n",
+       " ('her', 'PRP'),\n",
+       " ('what', 'WP'),\n",
+       " ('her', 'PRP$'),\n",
+       " ('goal', 'NN'),\n",
+       " ('in', 'IN'),\n",
+       " ('life', 'NN'),\n",
+       " ('was.', 'NN'),\n",
+       " ('She', 'PRP'),\n",
+       " ('replied,', 'VBD'),\n",
+       " ('\"I', 'NNP'),\n",
+       " ('want', 'VBP'),\n",
+       " ('to', 'TO'),\n",
+       " ('live', 'VB'),\n",
+       " ('in', 'IN'),\n",
+       " ('a', 'DT'),\n",
+       " ('developed', 'JJ'),\n",
+       " ('India.\"\\n\\nFor', 'NNP'),\n",
+       " ('her,', 'NN'),\n",
+       " ('and', 'CC'),\n",
+       " ('for', 'IN'),\n",
+       " ('all', 'DT'),\n",
+       " ('young', 'JJ'),\n",
+       " ('people,', 'NN'),\n",
+       " ('I', 'PRP'),\n",
+       " ('have', 'VBP'),\n",
+       " ('this', 'DT'),\n",
+       " ('dream:\\nA', 'NN'),\n",
+       " ('developed', 'VBD'),\n",
+       " ('India.', 'NNP'),\n",
+       " ('An', 'DT'),\n",
+       " ('India', 'NNP'),\n",
+       " ('that', 'WDT'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('strong.', 'PDT'),\n",
+       " ('An', 'DT'),\n",
+       " ('India', 'NNP'),\n",
+       " ('that', 'WDT'),\n",
+       " ('is', 'VBZ'),\n",
+       " ('self-reliant.\\n\\nLet', 'JJ'),\n",
+       " ('us', 'PRP'),\n",
+       " ('all', 'DT'),\n",
+       " ('work', 'NN'),\n",
+       " ('together', 'RB'),\n",
+       " ('and', 'CC'),\n",
+       " ('make', 'VB'),\n",
+       " ('this', 'DT'),\n",
+       " ('dream', 'NN'),\n",
+       " ('a', 'DT'),\n",
+       " ('reality.\\n\\nJai', 'NN'),\n",
+       " ('Hind!\\n', 'NNP')]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.pos_tag(paragraph.split(\" \"))"
+   ]
   }
  ],
  "metadata": {
